membicsys/docroot/css/site.css
/* ... */
.reviewbadgedis { opacity:0.3; filter:alpha(opacity=30); }
#shouteditbox, .shoutout { text-align:left;
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-size:small; }
.shoutout { width:160px; min-height:100px; }
.headingtxt { font-size:large; font-weight:bold; text-align:center; }
.revtitle { font-size:large; font-weight:bold; }
.revauthor { font-size:large; font-style:italic; }
.secondaryfield { font-style:italic; }
.revimg, .revimgdis { max-width:125px; max-height:125px; }
.revimgdis { opacity:0.3; filter:alpha(opacity=30); }
.webjump { width:20px; height:20px; vertical-align:middle; border:none }
.buttondiv { padding:0px 5px; font-size:large; }
.sharebuttondiv { display:inline; }  /* see shareico for padding */
.starsimg { vertical-align:middle; }

/* >> coop layout */
.tdnarrow { width:5%; padding:0px 5px 0px 0px; }
.dlgbuttonsdiv { text-align:center; padding:20px 0px 10px 0px; }
.dlgbuttonsdiv button { margin:0px 10px; }
.inlinebuttonsdiv { text-align:center; padding:0px 0px 10px 0px; }
.inlinebuttonsdiv button { margin:0px 10px; }
.dlgta { width:260px; height:80px; padding:5px 2px; overflow:auto; }
.dlgpara { width:260px; font-size:small; }
#rssurlta { height:40px; }
#uploadbuttonsdiv { text-align:center; padding:0px 0px 5px 0px; }
.searchbuttondiv { margin:0px 0px 0px 40px; }
.inlineimg { vertical-align:middle; padding:0px 4px; }

/* >> review layout */
#revdlgdiv { }
#rdurlbuttonspan { font-size:x-small; }
#rdurlbutton { margin:0px 0px 0px 3px; }
#rdstat1 { clear:both; }
#rdtypesdiv { width:240px; margin:auto; padding:0px 0px 0px 0px; }
#rdtypepromptdiv { font-size:small; text-align:center; color:#999; }
#rdkeyindiv { padding:0px 0px 10px 0px; }
#rdacdiv { float:right; width:50px; background:url('../img/rdaclab.png'); }
#rdaccb { margin:0px 0px 0px 5px; }
#rdaccblab { font-size:xx-small; width:50px; }
#rdpfdiv { padding:0px 0px 5px 0px; }
#rdpicdiv { float:left; margin:0px 5px 0px 0px; width:125px; height:125px; 
  cursor:pointer; overflow:hidden; }
#rddetsdiv { display:inline-block; }
#rdstfudiv { }
#rdstarsdiv { display:inline-block; height:35px; }
#rdfutcbdiv { vertical-align:top; float:right; width:50px; background:url('../img/rdfuture.png'); }
.rdfindiv { padding:0px 0px 6px 0px; }
#rdtextdiv { clear:both; padding:5px 0px 0px 0px; }
#rdta { width:275px; height:80px; padding:3px; overflow:auto;
  background-color:#e8e8ed; }
#rdkwcbsdiv { width:260px; margin:auto; overflow:auto; }
.rdkwcbdiv { display:inline-block; width:130px; font-size:small; 
  padding:0px 0px 10px 0px; }
.rdctmdiv { padding:0px 0px 8px 0px; }
.rdglpicdiv { display:inline-block; width:40px; margin:0px 2px 0px 5px; 
  overflow:hidden; }
.rdglpic { vertical-align:middle; max-width:40px; max-height:40px; 
  font-size:small; }
#rdokstatdiv { color:red; }
#revautodiv { clear:both; font-size:small; width:275px; }
#revautodiv ul { list-style-image:url('../img/acbullet.png'); }
#revmodifieddiv { padding:0px 0px 0px 10px; }
#modalseparatordiv { position:absolute; left:0px; top:0px; 
  background-color:#666666; opacity:0.3; filter:alpha(opacity=30); }
#revpicdlgdiv { width:220px; }
.revpictypelist { list-style:none; padding:0px 0px 10px 0px; margin:0; }
.ptddiv { display:inline-block; position:relative; vertical-align:top;
  width:125px; height:125px; margin:5px; background:#ffeac2; }
.overform { position:absolute; top:0px; left:0px; width:125px; }
.ptdlabspan { font-size:medium; }
#ptdfdiv { padding:5px; }
#ptduploadbuttonsdiv { text-align:center; padding:20px 0px 5px 0px; }
.directionstextdiv { text-align:center; font-size:small; }

/* >> activity layout */
#feedrevsdiv { padding:0px 0px 50px 0px; }
.fpdiv { clear:both; margin:0px 0px 20px 0px; }
.fpprofdiv, .fpprofdivsp { display:inline-block; width:50px; height:72px; 
  overflow:scroll; float:left; }
.fpprofdivsp { margin-right:5px; }
.fpprofpic { max-width:50px; max-height:60px; vertical-align:middle; }
.fpprefstatdiv { height:12px; font-size:12px; text-align:center; }
.fparevdiv { margin: 0px 0px 0px 50px; }
.fpnarevdiv { }
.fpinrevdiv, .fpmeminrevdiv { margin:0px 0px 0px 5px; }
.fpinrevdiv { background-color:#f9f9fc; }
.fpmeminrevdiv { background-color:#ffbe74; }
.fpbodydiv { overflow:auto; }
.fprevpicdiv { float:left; padding:0px 10px 0px 3px; }
.fpbuttonsdiv { margin-left:40px; padding-top:2px; }
.fpbuttondiv { display:inline-block; margin:0px 10px; }
.fpotherrevsdiv { display:inline-block; }
.fpbuttonimg { max-height:40px; max-width:40px; vertical-align:middle; }
.fpotherrevsdiv { }
.fptitlediv { display:inline-block; padding:0px 10px 0px 5px; }
.fpstarsdiv { display:inline-block; }
.fptypediv { display:inline-block; }
.fpsecfieldsdiv { margin-left:35px; /* reviewbadge + fptitlediv */
  font-size:x-small; }
.fpdatediv { margin-left:5px; font-size: xx-small; }
.fpdescrdiv, .fpkeywrdsdiv, .fpctmsdiv { 
  font-size:small; padding: 0px 10px 0px 2px;
  font-family:"Verdana", "Arial", "Helvetica", sans-serif; }
.fpkeywrdsdiv { font-style:italic; }
.fpjumpdiv { display:inline-block; padding: 0px 0px 0px 5px; }
.togglemoretextspan { background:#ccc; }
.fpinlinetextdiv { font-size:small; }
.visprefseldiv { font-size:medium; }
.vispreflabspan { display:inline-block; width:100px; }
.visprefdescrspan { padding-left:5px; font-size:small; }

/* >> docs layout */
.quotediv { font-size:small; padding:0px 0px 5px 5px; font-style:italic; }
.doccontentdiv { padding:10px 10px 0px 10px; }
#aboutoverviewdiv { font-size:large; }
#aboutdetailsheading { font-size:medium; font-weight:normal; font-style:italic; }
.aboutstatementsdiv { padding:0px 10px; font-size:small; }
.aboutstatementsdiv ul { margin:0px 0px 0px 4px; padding:0px 0px 0px 4px; }
.aboutfeaturespan { font-weight:bold; }
#aboutfeaturesdiv, #aboutfaqdiv {}
.aboutdetaildiv { display:none; padding:5px 0px; }
#aboutcoopsdiv { display:none; padding:5px 0px; }
.intxtico { width:18px; height:18px; }
.howtocontentdiv { padding:0px 10px 20px 10px; }
.hthimg { width:30px; height:30px; vertical-align:middle; }
/* ... */

